--- a/portfolio.html
+++ b/portfolio.html
@@ -84,7 +84,7 @@
                 <div class="img-container">
                   <img
                     src="./portfolio.html.img/techno-crack.jpg"
-                    width="368px"
+                    width="368"
                     alt="list of three persons on the laptop"
                   />
                   <p class="overlay">
@@ -103,7 +103,7 @@
               <a class="projects-list-link link" href="#">
                 <img
                   src="./portfolio.html.img/poster.jpg"
-                  width="368px"
+                  width="368"
                   alt="New Orlean vs Golden Star Poster"
                 />
                 <div class="img-description">
@@ -118,7 +118,7 @@
               <a class="projects-list-link link" href="#">
                 <img
                   src="./portfolio.html.img/seafood.jpg"
-                  width="368px"
+                  width="368"
                   alt="the seafood restaurant logo"
                 />
                 <div class="img-description">
@@ -131,7 +131,7 @@
               <a class="projects-list-link link" href="#">
                 <img
                   src="./portfolio.html.img/headphones.jpg"
-                  width="368px"
+                  width="368"
                   alt="headphones "
                 />
                 <div class="img-description">
@@ -144,7 +144,7 @@
               <a class="projects-list-link link" href="#">
                 <img
                   src="./portfolio.html.img/boxes.jpg"
-                  width="368px"
+                  width="368"
                   alt="brown and white boxes"
                 />
                 <div class="img-description">
@@ -157,7 +157,7 @@
               <a class="projects-list-link link" href="#">
                 <img
                   src="./portfolio.html.img/monitor.jpg"
-                  width="368px"
+                  width="368"
                   alt="monitor with information on it "
                 />
                 <div class="img-description">
@@ -170,7 +170,7 @@
               <a class="projects-list-link link" href="#">
                 <img
                   src="./portfolio.html.img/limited-edition.jpg"
-                  width="368px"
+                  width="368"
                   alt="a book "
                 />
                 <div class="img-description">
@@ -183,7 +183,7 @@
               <a class="projects-list-link link" href="#">
                 <img
                   src="./portfolio.html.img/lab.jpg"
-                  width="368px"
+                  width="368"
                   alt="labeltag"
                 />
                 <div class="img-description">
@@ -196,7 +196,7 @@
               <a class="projects-list-link link" href="#">
                 <img
                   src="./portfolio.html.img/growing-buisiness.jpg"
-                  width="368px"
+                  width="368"
                   alt="a person works on laptop "
                 />
                 <div class="img-description">
@@ -269,6 +269,23 @@
               </a>
             </li>
           </ul>
+        </div>
+        <div class="footer-submit-wrapper">
+          <p class="footer-action-call">Подпишитесь на рассылку</p>
+          <form action="#" class="footer-submit-form">
+            <input
+              type="email"
+              placeholder="E-mail"
+              class="footer-submit-input"
+              name="user-email"
+              required=""
+            /><button class="footer-submit-button" type="submit">
+              Подписаться
+              <svg width="24" height="24" class="submit-icon">
+                <use href="./icons/sprite-svg.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
         </div>
       </div>
     </footer>
