на глаз все ок :)

--- a/portfolio.html
+++ b/portfolio.html
@@ -216,7 +216,7 @@
             Web<span class="footer-logo-style">Studio</span></a
           >
           <ul>
-            <li>
+            <li class="footer-list-item">
               <a
                 class="address-on-map link"
                 href="https://goo.gl/maps/1etui27LHii61bxHA"
@@ -224,12 +224,12 @@
                 ><span class="">г. Киев, пр-т Леси Украинки, 26</span></a
               >
             </li>
-            <li>
+            <li class="footer-list-item">
               <a class="contact-info link" href="mailto:info@example.com"
                 >info@example.com</a
               >
             </li>
-            <li>
+            <li class="footer-list-item">
               <a class="contact-info link" href="tel:+380991111111">
                 +38 099 111 11 11</a
               >
