--- a/portfolio.html
+++ b/portfolio.html
@@ -13,20 +13,20 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
     />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="./css/portfolio.min.css" />
   </head>
   <body>
     <header class="page-header dividing-line">
       <div class="container">
         <nav class="site-nav">
-          <a class="logo link" href="index.html">
-            Web<span class="logo-style">Studio</span></a
+          <a class="nav-logo link" href="index.html">
+            Web<span class="nav-logo-style">Studio</span></a
           >
-          <ul class="flex-list">
-            <li class="flex-list-item">
+          <ul class="nav-list">
+            <li class="nav-list-item">
               <a class="nav-links link" href="./index.html">Студия</a>
             </li>
-            <li class="flex-list-item">
+            <li class="nav-list-item">
               <a
                 class="nav-links current portfolio-underline link"
                 href="./portfolio.html"
@@ -34,23 +34,23 @@
                 Портфолио
               </a>
             </li>
-            <li class="flex-list-item">
+            <li class="nav-list-item">
               <a class="nav-links link" href="#"> Контакты</a>
             </li>
           </ul>
         </nav>
         <ul class="contacts-nav">
           <li class="contacts-nav-item">
-            <a class="contact-info link" href="mailto:info@devstudio.com">
-              <svg class="contacts-icon-mail">
+            <a class="contacts-nav-info link" href="mailto:info@devstudio.com">
+              <svg class="contacts-nav-icon-mail">
                 <use href="./icons/sprite-svg.svg#icon-mail"></use>
               </svg>
               info@devstudio.com</a
             >
           </li>
           <li class="contacts-nav-item">
-            <a class="contact-info link" href="tel:+380961111111">
-              <svg class="contacts-icon-tel">
+            <a class="contacts-nav-info link" href="tel:+380961111111">
+              <svg class="contacts-nav-icon-tel">
                 <use href="./icons/sprite-svg.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11</a
@@ -212,7 +212,7 @@
     <footer class="footer">
       <div class="container footer-social-container">
         <address class="main-contacts">
-          <a href="index.html" class="logo link">
+          <a href="index.html" class="footer-logo link">
             Web<span class="footer-logo-style">Studio</span></a
           >
           <ul>
@@ -221,16 +221,16 @@
                 class="address-on-map link"
                 href="https://goo.gl/maps/1etui27LHii61bxHA"
                 target="_blank"
-                ><span class="">г. Киев, пр-т Леси Украинки, 26</span></a
+                >г. Киев, пр-т Леси Украинки, 26</a
               >
             </li>
             <li class="footer-list-item">
-              <a class="contact-info link" href="mailto:info@example.com"
+              <a class="footer-contact-info link" href="mailto:info@example.com"
                 >info@example.com</a
               >
             </li>
             <li class="footer-list-item">
-              <a class="contact-info link" href="tel:+380991111111">
+              <a class="footer-contact-info link" href="tel:+380991111111">
                 +38 099 111 11 11</a
               >
             </li>
