--- a/index.html
+++ b/index.html
@@ -13,43 +13,43 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
     />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
     <header class="page-header">
       <div class="container">
         <nav class="site-nav">
-          <a class="logo link" href="index.html">
-            Web<span class="logo-style">Studio</span></a
+          <a class="nav-logo link" href="index.html">
+            Web<span class="nav-logo-style">Studio</span></a
           >
-          <ul class="flex-list">
-            <li class="flex-list-item">
+          <ul class="nav-list">
+            <li class="nav-list-item">
               <a
                 class="nav-links current studio-underline link"
                 href="./index.html"
                 >Студия</a
               >
             </li>
-            <li class="flex-list-item">
+            <li class="nav-list-item">
               <a class="nav-links link" href="./portfolio.html"> Портфолио </a>
             </li>
-            <li class="flex-list-item">
+            <li class="nav-list-item">
               <a class="nav-links link" href="#"> Контакты</a>
             </li>
           </ul>
         </nav>
         <ul class="contacts-nav">
           <li class="contacts-nav-item">
-            <a class="contact-info link" href="mailto:info@devstudio.com">
-              <svg class="contacts-icon-mail">
+            <a class="contacts-nav-info link" href="mailto:info@devstudio.com">
+              <svg class="contacts-nav-icon-mail">
                 <use href="./icons/sprite-svg.svg#icon-mail"></use>
               </svg>
               info@devstudio.com</a
             >
           </li>
           <li class="contacts-nav-item">
-            <a class="contact-info link" href="tel:+380961111111">
-              <svg class="contacts-icon-tel">
+            <a class="contacts-nav-info link" href="tel:+380961111111">
+              <svg class="contacts-nav-icon-tel">
                 <use href="./icons/sprite-svg.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11</a
@@ -60,8 +60,8 @@
     </header>
     <main>
       <section class="hero">
-        <h1 class="solutions">Эффективные решения для вашего бизнеса</h1>
-        <button type="button" class="services" data-modal-open>
+        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+        <button type="button" class="hero-button" data-modal-open>
           Заказать услугу
         </button>
       </section>
@@ -165,7 +165,7 @@
         </div>
       </section>
       <section class="team">
-        <h3 class="section-title our-team">Наша команда</h3>
+        <h3 class="team-title">Наша команда</h3>
         <div class="container">
           <ul class="team-list">
             <li class="team-list-item">
@@ -394,7 +394,7 @@
     <footer class="footer">
       <div class="container footer-social-container">
         <address class="main-contacts">
-          <a href="index.html" class="logo link">
+          <a href="index.html" class="footer-logo link">
             Web<span class="footer-logo-style">Studio</span></a
           >
           <ul>
